--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -105,3 +105,11 @@ footer {
     text-align: center;
 }
 
+.linkFooter {
+    display: block;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 25px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
